The latest measurement values are not visible in the table #502